# 20241111_humedad_suelo_dataset_success

./: .gitmodules  pyproject.toml
notebooks/: 1_suscription_pipeline.ipynb  2_download_images.ipynb  3_process_images.ipynb  5_join_tend_groups.ipynb
