[project]
name = "data-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "jsonlines>=4.0.0",
    "pydantic-settings>=2.5.2",
    "requests>=2.32.3",
    "kilimo-data-lib==0.1.0",
    "numpy>=2.1.2",
    "seaborn>=0.13.2",
]

[tool.uv]
dev-dependencies = [
    "ipdb>=0.13.13",
    "ipython>=8.28.0",
    "jupyter>=1.1.1",
]

[tool.uv.sources]
kilimo-data-lib = { path = "packages/kilimo-data-lib", editable = true }

#[tool.uv.workspace]
#members = [
#  "packages/*"
#]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/template_data"]
